# pjsip-cap

./: .gitignore  CapacitorPjsip.podspec  Package.swift  README.md  package-lock.json  package.json  rollup.config.mjs
android/: build.gradle
android/libs/openssl/: configuration.h
android/libs/pj/: config_site.h
android/libs/pj/compat/: os_auto.h
android/libs/pjmedia-codec/: config_auto.h
android/src/main/: AndroidManifest.xml
android/src/main/jni/: CMakeLists.txt  pjsip_jni.c
android/src/main/kotlin/com/redyrect/pjsip/: CallConnectionService.kt  Pjsip.kt  PjsipNative.kt  PjsipPlugin.kt  PushService.kt  SipManager.kt
example-app/: package.json
example-app/android/: capacitor.settings.gradle
example-app/android/app/: capacitor.build.gradle
example-app/ios/App/CapApp-SPM/: Package.swift
example-app/src/js/: example.js
ios/Frameworks/PjsipSDK.xcframework/: Info.plist
ios/Frameworks/PjsipSDK.xcframework/ios-arm64/Headers/: module.modulemap
ios/Frameworks/PjsipSDK.xcframework/ios-arm64/Headers/pj/: config_site.h
ios/Frameworks/PjsipSDK.xcframework/ios-arm64/Headers/pj/compat/: os_auto.h
ios/Frameworks/PjsipSDK.xcframework/ios-arm64/Headers/pjmedia-codec/: config_auto.h
ios/Frameworks/PjsipSDK.xcframework/ios-arm64_x86_64-simulator/Headers/pj/: config.h
ios/Sources/PjsipPlugin/: CallKitManager.swift  Pjsip.swift  PjsipPlugin.swift  PushManager.swift  SipManager.swift
ios/Tests/PjsipPluginTests/: PjsipTests.swift
scripts/: build-android.sh  build-ios.sh
src/: definitions.ts  index.ts  web.ts
